--- a/LoLWeb/css/style.css
+++ b/LoLWeb/css/style.css
@@ -1,42 +1,54 @@
 @CHARSET "UTF-8";
-.header{
-	height:70px;
-    background:#22303d;
- 	border-top: 2px solid #22303d;
-    border-bottom: 2px solid #22303d;
-    width:100%
-}
-.summoner_body{
-    background:#1b1b1b;
-    border: 4px solid #1b1b1b;
-    width:100%;
-    height:100%;
-    border-collapse: collapse;
-}
-.summoner_body_main{
-    background:#1b1b1b;
-    width:100%;
-    height: 100%;
-    border-collapse: collapse;
+
+.header {
+	height: 70px;
+	background: #22303d;
+	border-top: 2px solid #22303d;
+	border-bottom: 2px solid #22303d;
+	width: 100%
 }
 
-.sb_td{
-    border: 1px solid white;
-    border-collapse: collapse;
-}
-table{
-color: White;
-border-collapse: collapse;
+.summoner_body {
+	background: #1b1b1b;
+	border: 4px solid #1b1b1b;
+	width: 100%;
+	height: 100%;
+	border-collapse: collapse;
 }
 
-table td, 
-table th,
-table tr{
-padding: 0; /* 'cellpadding' equivalent */
-margin : 0;
+.summoner_body_main {
+	background: #1b1b1b;
+	width: 100%;
+	height: 100%;
+	border-collapse: collapse;
 }
-.sb_main_table{
-width: 100%;
-padding: 0;
-border-collapse: collapse;
-} 
+
+.sb_td {
+	border: 1px solid white;
+	border-collapse: collapse;
+}
+
+table {
+	color: White;
+	border-collapse: collapse;
+}
+
+table td, table th, table tr {
+	padding: 0; /* 'cellpadding' equivalent */
+	margin: 0;
+}
+
+.sb_main_table {
+	width: 100%;
+	padding: 0;
+	border-collapse: collapse;
+}
+.game_tr{
+	width: 100%;
+	vertical-align: center;
+	text-align: center;
+}
+.game_td{
+	border-top: 1px solid white;
+	border-bottom: 1px solid white;
+}
